[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.24"
mysql = "23.0.1"
tokio = { version = "1", features = [ "macros", "io-util", "rt", "rt-multi-thread" ] }
